

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "alchemyrohan"
version = "0.5.0"
dependencies = [
    "SQLAlchemy>=2.0.29",
    "oracledb>=2.1.1"
]
requires-python = ">=3.10"
authors = [
  { name = "Alan Wamberger", email = "awamberger@proton.me" },
]
description = "Is a helpful tool for creating SqlAlchemy models."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["alchemyrohan", "database", "SQLAlchemy", "models", "help-tool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators"
]


[project.urls]
Homepage = "https://github.com/wamberger/alchemyrohan"
Documentation = "https://github.com/wamberger/alchemyrohan/blob/master/README.md"
Repository = "https://github.com/wamberger/alchemyrohan"
Changelog = "https://github.com/wamberger/alchemyrohan/blob/master/CHANGELOG.md"


[project.scripts]
arohan = "alchemyrohan.assemble:main"